apps/istio/search/src/main/k8s/search.v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  labels:
    app: search
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: search
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: search
    version: v1
  name: search
spec:
  selector:
    matchLabels:
      app: search
      version: v1
  template:
    metadata:
      labels:
        app: search
        version: v1
    spec:
      containers:
        - image: stacklabs/gke-and-istio-search:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8181
            initialDelaySeconds: 20
          name: app
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: search
spec:
  hosts:
    - search
  http:
    - route:
        - destination:
            host: search
            subset: version-1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: search
spec:
  host: search
  subsets:
    - name: version-1
      labels:
        version: v1
