apps/istio/search/src/main/k8s/search.v2.mirroring-clean.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  labels:
    app: search
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: search
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: workshop
  name: search-v2
  labels:
    app: search
    version: v2
spec:
  selector:
    matchLabels:
      app: search
      version: v2
  template:
    metadata:
      labels:
        app: search
        version: v2
    spec:
      containers:
        - image: stacklabs/gke-and-istio-search:v2 # <1>
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8181
            initialDelaySeconds: 20
          name: search
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: workshop
  name: search
spec:
  hosts:
    - search
  http:
    - route:
        - destination:
            host: search
            subset: version-1
      mirror:
        host: search
        subset: version-2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  namespace: workshop
  name: search
spec:
  host: search
  subsets:
    - name: version-1
      labels:
        version: v1
    - name: version-2
      labels:
        version: v2
